intel/bench_214/extr_.linuxdriversstagingmediadavinci_vpfedm365_resizer.c_configure_resizer_out_params_with_main/log.txt
bench_214/extr_.linuxdriversstagingmediadavinci_vpfedm365_resizer.c_configure_resizer_out_params_with_main/extr_.linuxdriversstagingmediadavinci_vpfedm365_resizer.c_configure_resizer_out_params_with_main.c:52:11: error: assigning to 'struct vpfe_rsz_output_spec *' from incompatible type 'void *'
        output = output_spec;
                 ^~~~~~~~~~~
1 error generated.
HLS FPGA Parse FAILED.
